# fastapi-data-science

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt
ch2-py-prog-spec/: ch2_use_pkg.py  list_comprehension.ipynb
ch2-py-prog-spec/docs/: README.md
ch2_py_prog_spec/: list_comprehension.ipynb
ch3_restful_api/: restful.ipynb
ch3_restful_api/assets/: cat.py
ch3_restful_api/chapter3_project/: app.py
ch3_restful_api/chapter3_project/routers/: users.py
ch4_pydantic/: pydantic_models.ipynb
ch5-dependency_injection/: dependency_injection.ipynb
ch6-db-orm/: db-orm.ipynb
ch6-db-orm/fs/: app.py  database.py  models.py
