[tool.poetry]
name = "fastapi-data-science"
version = "0.1.0"
description = ""
authors = ["Yaakov Azat <yaakovazat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
fastapi = {extras = ["standard"], version = "^0.70.1"}
uvicorn = "^0.16.0"
pydantic = "^1.8.2"
jupyterlab = "^3.2.5"
black = "^21.12b0"
typing-extensions = "^4.0.1"
nest-asyncio = "^1.5.4"
python-multipart = "^0.0.5"
databases = {extras = ["sqlite"], version = "^0.5.3"}
SQLAlchemy = "^1.4.28"
alembic = "^1.7.5"
tortoise-orm = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
